feat : get요청으로 ticket 페이지 반환

--- a/producer/src/public/ticket.html
+++ b/producer/src/public/ticket.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>express</title>
+    <title>Ticket 예약 페이지</title>
 </head>
 <body>
-    <button onclick="window.location.href='/ticket'">이동</button>
+    예약페이지
 </body>
 </html>
