docs : readme 통신방식 수정

--- a/producer/src/public/ticket.html
+++ b/producer/src/public/ticket.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket 예약 페이지</title>
+    <script>
+        const callRedis = () => {
+            
+        }
+    </script>
 </head>
 <body>
-    예약페이지
+    예약페이지<br>
+
+    <button></button>
 </body>
 </html>
