--- a/producer_waiting_room/src/public/waiting.html
+++ b/producer_waiting_room/src/public/waiting.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>waiting..</title>
+    <script>
+        window.onload = () => {
+            const body = document.querySelector("body");
+
+            const getCookie = (name) => {
+                const value = `; ${document.cookie}`; 
+                const parts = value.split(`; ${name}=`);
+                if (parts.length === 2) return parts.pop().split(';').shift();
+                return null;
+            }
+
+            const queueLength = getCookie('queueLength');
+            if(queueLength!=null){
+                body.insertAdjacentHTML("beforebegin", `${queueLength}번째 대기자 입니다...`);
+            }
+        }
+    </script>
 </head>
 <body>
-    대기
 </body>
 </html>
